syntax = "proto3";

import "size.proto";

message XZY_SeparableConvolutionParams {
    XZY_Size col_matrix_size = 1;
    XZY_Size kernel_size = 2;
    // may be exist -1, so col_table here uses int32 instead of uint32
    repeated int32 col_table = 3;
    repeated float weight = 4;
    repeated float biases = 5;
}
